--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
             android:hint="몸무게"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/editText2" android:layout_marginStart="16dp"
+            android:id="@+id/weightEditText" android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/heightEditText"
             android:layout_marginEnd="16dp"/>
@@ -36,8 +36,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/button"
+            android:id="@+id/resultButton"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/editText2"/>
+            app:layout_constraintTop_toBottomOf="@+id/weightEditText"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
